enum CompetitionStatus {
  DRAFT
  ACTIVE
  COMPLETED
  CANCELLED
  ARCHIVED
}

model competition {
  uid                   String                 @id @unique @default(uuid()) @db.Uuid
  created               DateTime               @default(now())
  updated               DateTime               @updatedAt
  name                  String
  venue                 String?
  date                  DateTime?
  organizer_name        String?
  organizer_email       String?
  organization          String?
  website               String?
  is_deleted            Boolean                @default(false)
  deleted_at            DateTime?
  deleted_by_id         String?                @db.Uuid
  status                CompetitionStatus      @default(DRAFT)
  adjudicator          adjudicator[]
  competition_log      competition_log[]
  competition_notes    competition_notes[]
  competition_schedule competition_schedule[]
  competition_users    competition_users[]
  panels               panels[]
  sections             sections[]
}
