model competition_notes {
  uid            String      @id @unique @default(uuid()) @db.Uuid
  created        DateTime    @default(now())
  updated        DateTime    @updatedAt
  competition_id String      @db.Uuid
  competition    competition @relation(fields: [competition_id], references: [uid])
  user_id        String      @db.Uuid
  note           String
  attachmentUrls String[]
}
