enum CompetitionUserRole {
  ADMIN
  SCRUTINEER
  JUDGE
  OFFICIAL
  VIEWER
}

model competition_users {
  uid            String              @id @unique @default(uuid()) @db.Uuid
  created        DateTime            @default(now())
  updated        DateTime            @updatedAt
  competition_id String              @db.Uuid
  competition    competition         @relation(fields: [competition_id], references: [uid])
  user_id        String              @db.Uuid
  user           users               @relation(fields: [user_id], references: [uid])
  role           CompetitionUserRole @default(VIEWER)
  is_deleted     Boolean             @default(false)
  deleted_at     DateTime?
  is_active      Boolean             @default(true)

  // relationships
  heat_reviewed_by  heat[]            @relation("competition_user_heat_reviewed_by")
  heat_checked_by   heat[]            @relation("competition_user_heat_checked_by")
  dancer_created_by dancers[]         @relation("dancer_created_by")
  dancer_updated_by dancers[]         @relation("dancer_updated_by")
  dancer_deleted_by dancers[]         @relation("dancer_deleted_by")
  competition_log   competition_log[]
  heat_marks        heat_marks[]
  heat_result       heat_result[]
}
