enum UserTypes {
  ADMIN
  SCRUTINEER
  CHAIRPERSON
  DANCER
  ORGANIZER
  LECTURERER
}

model users {
  uid                String      @id @unique @default(uuid()) @db.Uuid
  created            DateTime    @default(now())
  updated            DateTime    @updatedAt
  external_id        String?     @unique
  stripe_customer_id String?     @unique
  user_types         UserTypes[] @default([])
  is_deleted         Boolean     @default(false)
  deleted_at         DateTime?
  deleted_by_id      String?     @db.Uuid

  user_licenses     user_license[]
  competition_users competition_users[]

  @@index([external_id], name: "users_external_id_idx")
  @@index([stripe_customer_id], name: "users_stripe_customer_id_idx")
}
